# NaviTag

./: Cargo.toml  README.md
src/: audio.rs  main.rs  settings.rs  toast.rs
src/api/: apple_music.rs  genius.rs  lastfm.rs  mod.rs  spotify.rs
